Orchestration/deploying-into-k8s-v1/ingress/https-website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-liveclass
  name: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "payment-app.liveclass.training.darey.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  tls:
  - hosts:
    - payment-app.liveclass.training.darey.io
    secretName: payment-app.liveclass.training.darey.io
